
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {int d_name; } ;
typedef int DIR ;


 int closedir (int *) ;
 int * opendir (char*) ;
 int printf (char*) ;
 struct dirent* readdir (int *) ;
 scalar_t__ strcmp (int ,char*) ;

void check_proc_dotdot()
{
  DIR *procDIR;
  struct dirent *procdirent;
  int found;

  printf("dotdot test:\n");
  procDIR = opendir("/proc");
  if (procDIR == ((void*)0))
  {
    printf("  Error: Couldn't open /proc while performing dotdot test.\n");
    return;
  }
  found = 0;
  procdirent = readdir(procDIR);
  while (procdirent != ((void*)0))
  {
    if (strcmp(procdirent->d_name, "..") == 0)
    {
      found = 1;
      break;
    }
    procdirent = readdir(procDIR);
  }
  closedir(procDIR);
  if (found == 0)
  {
    printf("  ManTrap? /proc/.. not found in directory listing!\n");
  } else {
    printf("  Normal: /proc/.. found in directory listing.\n");
  }

}
