; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20380.c_check_proc_dotdot.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/local/extr_20380.c_check_proc_dotdot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"dotdot test:\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"/proc\00", align 1
@.str.2 = private unnamed_addr constant [60 x i8] c"  Error: Couldn't open /proc while performing dotdot test.\0A\00", align 1
@.str.3 = private unnamed_addr constant [3 x i8] c"..\00", align 1
@.str.4 = private unnamed_addr constant [53 x i8] c"  ManTrap? /proc/.. not found in directory listing!\0A\00", align 1
@.str.5 = private unnamed_addr constant [48 x i8] c"  Normal: /proc/.. found in directory listing.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_proc_dotdot() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.dirent*, align 8
  %3 = alloca i32, align 4
  %4 = call i32 @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %5 = call i32* @opendir(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  store i32* %5, i32** %1, align 8
  %6 = load i32*, i32** %1, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = call i32 @printf(i8* getelementptr inbounds ([60 x i8], [60 x i8]* @.str.2, i64 0, i64 0))
  br label %35

10:                                               ; preds = %0
  store i32 0, i32* %3, align 4
  %11 = load i32*, i32** %1, align 8
  %12 = call %struct.dirent* @readdir(i32* %11)
  store %struct.dirent* %12, %struct.dirent** %2, align 8
  br label %13

13:                                               ; preds = %23, %10
  %14 = load %struct.dirent*, %struct.dirent** %2, align 8
  %15 = icmp ne %struct.dirent* %14, null
  br i1 %15, label %16, label %26

16:                                               ; preds = %13
  %17 = load %struct.dirent*, %struct.dirent** %2, align 8
  %18 = getelementptr inbounds %struct.dirent, %struct.dirent* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @strcmp(i32 %19, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0))
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %16
  store i32 1, i32* %3, align 4
  br label %26

23:                                               ; preds = %16
  %24 = load i32*, i32** %1, align 8
  %25 = call %struct.dirent* @readdir(i32* %24)
  store %struct.dirent* %25, %struct.dirent** %2, align 8
  br label %13

26:                                               ; preds = %22, %13
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @closedir(i32* %27)
  %29 = load i32, i32* %3, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %26
  %32 = call i32 @printf(i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str.4, i64 0, i64 0))
  br label %35

33:                                               ; preds = %26
  %34 = call i32 @printf(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str.5, i64 0, i64 0))
  br label %35

35:                                               ; preds = %8, %33, %31
  ret void
}

declare dso_local i32 @printf(i8*) #1

declare dso_local i32* @opendir(i8*) #1

declare dso_local %struct.dirent* @readdir(i32*) #1

declare dso_local i64 @strcmp(i32, i8*) #1

declare dso_local i32 @closedir(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
